03-tenants/04-example-helloworld/bases/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: helloworld
spec:
  selector:
    deployment: helloworld
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
