03-tenants/04-example-helloworld/bases/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: helloworld
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: helloworld
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
